# h11r

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  zensical.toml
.agents/skills/h11r-implementation/: SKILL.md
.agents/skills/http11-audit/: SKILL.md
.agents/skills/http11-implementation/: SKILL.md
.agents/skills/http11-knowledge/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-question.yml  config.yml
.github/scripts/: classify-changes.sh
.github/workflows/: ci.yml  publish-docs.yml  release.yml
crates/h11r/: Cargo.toml
crates/h11r-python/: Cargo.toml  pyproject.toml
crates/h11r-python/benchmarks/: render_results.py
crates/h11r-python/src/: api.rs  lib.rs
crates/h11r-python/tests/: test_api.py  test_examples.py  test_free_threading.py
crates/h11r/benches/: h11r.rs
crates/h11r/src/: connection.rs  lib.rs  state.rs  wire.rs
crates/h11r/tests/: protocol.rs
crates/http11/: Cargo.toml
crates/http11-python/: Cargo.toml  pyproject.toml
crates/http11-python/benchmarks/: compare_h11.py  render_results.py
crates/http11-python/src/: api.rs  lib.rs
crates/http11-python/tests/: test_api.py  test_import.py  test_interop.py
crates/http11/benches/: http11.rs
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/advanced/: index.html
dev/api/: index.html
dev/changelog/: index.html
dev/concepts/: index.html
dev/contributing/: index.html
dev/getting-started/: index.html
dev/integration/: index.html
dev/license/: index.html
dev/round-trip/: index.html
dev/security/: index.html
docs/assets/: python-benchmark.json
docs/knowledge/: README.md
docs/overrides/: main.html
docs/site/: advanced.md  api.md  changelog.md  concepts.md  contributing.md  getting-started.md  index.md  integration.md  license.md  round-trip.md  security.md
examples/: README.md
examples/python/: asyncio_server.py  first_client.py  round_trip.py  websocket_upgrade.py  zero_copy_body.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: h11r_send.rs  http11_fragmentation.rs  http11_receive.rs  http11_send.rs
fuzz/fuzz_targets/common/: mod.rs
(+23 files in other folders)
