[package]
name = "http11-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Python bindings for the http11 protocol engine"
repository = "https://github.com/cnzakii/http11"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
http11 = { path = "../http11" }
